Spring Security + JPA + Banco de dados - Validando Usuário 25/11 13:19

--- a/Bilhete.Facil/src/main/resources/application.properties
+++ b/Bilhete.Facil/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.datasource.url=jdbc:postgresql://localhost:8745/bilhete-facil
 #spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=postgres
 spring.datasource.password=supertux
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
@@ -19,3 +20,6 @@ server.port=8090
 
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+
+#spring.thymeleaf.prefix=classpath:/mytemplate/
+#spring.thymeleaf.suffix=.html
