Correção de Interceptaçao de Acesso +  Consumindo WebService RESTFULL CEP

--- a/Bilhete.Facil/bin/src/main/resources/application.properties
+++ b/Bilhete.Facil/bin/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.address=0.0.0.0
 server.port=8090
 
+spring.mvc.static-path-pattern=src/main/resources/static/**
 #server.servlet.context-path=/Bilhete.Facil
 
 #H2 console web access configuration
