Busca por Registro + Selecão por Combo

--- a/Bilhete.Facil/src/main/resources/application.properties
+++ b/Bilhete.Facil/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 server.address=0.0.0.0
 server.port=8090
 
+debug=true
+
 #server.servlet.context-path=/Bilhete.Facil
 
 #H2 console web access configuration
