--- a/Bilhete.Facil/pom.xml
+++ b/Bilhete.Facil/pom.xml
@@ -89,6 +89,13 @@
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity5</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.18.1</version>
+		</dependency>
+		
+		
 	 </dependencies>
 	<build>
 		<plugins>
