--- a/Bilhete.Facil/src/main/resources/application.properties
+++ b/Bilhete.Facil/src/main/resources/application.properties
@@ -9,11 +9,25 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Spring Boot server configuration
 server.address=0.0.0.0
-server.port=8090
+server.port=8084
 
 debug=true
 
 #server.servlet.context-path=/Bilhete.Facil
+
+spring.datasource.platform=potgres
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.http.encoding.force-request=true
+spring.http.encoding.force-response=true
+
+spring.servlet.multipart.max-file-size=10000KB
+spring.servlet.multipart.max-request-size=10000KB
 
 #H2 console web access configuration
 #Open "http://0.0.0.0:8000/h2-console" and hit "Connect" button
